starting server, parsing and putting data into database all clear. Started first endpoint. Retriving data works, problems with getting branches of HQ

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
       - "8080:8080"
     environment:
       - MONGO_URI=mongodb+srv://kamilkoscielny2002:Qetuoadgjlxvn.1@cluster0.wpmnnvs.mongodb.net/
-      - GOOGLE_APPLICATION_CREDENTIALS=/app/secrets/credentials.json
-      - SHEET_ID=1iFFqsu_xruvVKzXAadAAlDBpIuU51v-pfIEU5HeGa8w
-      - SHEET_RANGE=Sheet1!A1:H1500
     volumes:
       - ./secrets/credentials.json:/app/secrets/credentials.json
+      - ./Data.csv:/root/Data.csv
     networks:
       - swift-net
 
